# usbbw

./: Cargo.toml  README.md
.claude/: CLAUDE.md
configs/: framework-franmgcp.toml
src/: lib.rs  main.rs
src/config/: loader.rs  mod.rs
src/model/: bandwidth.rs  endpoint.rs  mod.rs  speed.rs  topology.rs
src/output/: mermaid.rs  mod.rs
src/sysfs/: mod.rs  parser.rs
src/ui/: app.rs  mod.rs  render.rs
